--- a/com.stansassets.scene-management/Editor/Window/Tabs/SettingsTab.uxml
+++ b/com.stansassets.scene-management/Editor/Window/Tabs/SettingsTab.uxml
@@ -1,5 +1,11 @@
-<ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements">
+<ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements"
+         xmlns:sa="StansAssets.Foundation.UIElements">
+    <sa:SettingsBlock label="Optional Settings">
     <ui:VisualElement name="tab-root">
         <uie:ObjectField label="Landing Scene" name="landing-scene" />
     </ui:VisualElement>
+    </sa:SettingsBlock>
+    <sa:SettingsBlock label="Registered Stacks View">
+        <ui:VisualElement name="enums"/>
+    </sa:SettingsBlock>
 </ui:UXML>
