--- a/com.stansassets.scene-management/Editor/Window/Tabs/SettingsTab.uss
+++ b/com.stansassets.scene-management/Editor/Window/Tabs/SettingsTab.uss
@@ -1,3 +1,51 @@
 .tab-root {
     flex-grow: 1;
 }
+
+#ListView 
+{
+	height: 300px;
+	width: auto;
+	flex: 1;
+	margin: 15px;
+	background-color: rgba(100,100,100,1);
+}
+
+#LabelActive
+{
+	flex: 0.9;
+	position: relative;
+	
+	background-color: rgba(0, 255, 0, 1);
+	border-width: 3px;
+	max-height: 50px;
+	min-height: 30px;
+	margin: 5px;
+	-unity-text-align: middle-center;
+}
+
+#LabelPause
+{
+	flex: 0.9;
+	position: relative;
+	
+	background-color: rgba(255, 255, 0, 1);
+	border-width: 3px;
+	max-height: 50px;
+	min-height: 30px;
+	margin: 5px;
+	-unity-text-align: middle-center;
+}
+
+#LabelDelete
+{
+	flex: 0.9;
+	position: relative;
+	
+	background-color: rgba(255, 0, 0, 1);
+	border-width: 3px;
+	max-height: 50px;
+	min-height: 30px;
+	margin: 5px;
+	-unity-text-align: middle-center;
+}
