--- a/com.stansassets.scene-management/Editor/Window/Tabs/SettingsTab.uss
+++ b/com.stansassets.scene-management/Editor/Window/Tabs/SettingsTab.uss
@@ -11,6 +11,19 @@
 	background-color: rgba(100,100,100,1);
 }
 
+#Label
+{
+	flex: 0.9;
+	position: relative;
+
+	background-color: rgb(253, 255, 250);
+	border-width: 3px;
+	max-height: 50px;
+	min-height: 30px;
+	margin: 5px;
+	-unity-text-align: middle-center;
+}
+
 #LabelActive
 {
 	flex: 0.9;
